# cpu-path-tracer

./: .gitignore  LICENSE  README.md
PathTracer/: CMakeLists.txt
PathTracer/cmake/: FindASSIMP.cmake  FindSDL2.cmake
PathTracer/include/assimp/: camera.h  mesh.h  metadata.h  vector2.h
PathTracer/lib/: SDL2.lib  SDL2main.lib  assimp-vc143-mt.lib  gtest_main.lib
PathTracer/lib/assimp-5.0.1/BINARIES/Win32/: Assimp.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
PathTracer/lib/assimp-5.0.1/BINARIES/Win32/code/: cmake_install.cmake
PathTracer/lib/assimp-5.0.1/BINARIES/Win32/contrib/: INSTALL.vcxproj.filters
PathTracer/lib/assimp-5.0.1/BINARIES/Win32/contrib/irrXML/: INSTALL.vcxproj  INSTALL.vcxproj.filters  IrrXML.vcxproj.filters  cmake_install.cmake
PathTracer/lib/assimp-5.0.1/BINARIES/Win32/test/: INSTALL.vcxproj.filters
PathTracer/lib/assimp-5.0.1/BINARIES/x64/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  assimpTargets-release.cmake  cmake_uninstall.cmake  revision.h  uninstall.vcxproj
PathTracer/lib/assimp-5.0.1/BINARIES/x64/code/: assimp.vcxproj.filters  cmake_install.cmake
PathTracer/lib/assimp-5.0.1/BINARIES/x64/test/: INSTALL.vcxproj.filters  unit.vcxproj.filters
PathTracer/lib/assimp-5.0.1/code/Material/: MaterialSystem.cpp
PathTracer/lib/assimp-5.0.1/include/assimp/: camera.h  light.h  material.h  types.h
PathTracer/lib/assimp-5.0.1/lib/x64/: assimp-vc142-mt.exp  assimp-vc142-mtd.exp
PathTracer/lib/assimp-5.0.1/lib/x86/: assimp-vc142-mt.exp  assimp-vc142-mt.lib  assimp-vc142-mtd.exp  assimp-vc142-mtd.lib
PathTracer/prebuiltLibs/x86/win32/debug/: SDL2d.exp  SDL2d.ilk  SDL2d.lib  assimp-vc141-mtd.exp  assimp-vc141-mtd.lib  gtest_maind.exp  gtest_maind.lib  gtestd.exp  gtestd.lib
PathTracer/prebuiltLibs/x86/win32/release/: SDL2.exp  SDL2.lib  assimp-vc141-mt.exp  assimp-vc141-mt.lib  gtest.exp  gtest.lib  gtest_main.exp
PathTracer/res/: cornell_bunny_35k.dae  cornell_bunny_8k.dae  testScene.dae  testScene_diffuse.dae  testScene_overlapping.dae  testScene_path_trace_bunny.dae  testScene_path_trace_dof.dae
PathTracer/src/: Application.cpp  Application.hpp  CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.hpp  PathTracer.cpp  PathTracer.hpp  Timer.cpp  Timer.hpp  exceptions.hpp  main.cpp  raytracing.hpp  settings.hpp  template.cpp  template.hpp
PathTracer/src/Textures/: CheckerTexture.cpp  CheckerTexture.hpp  ImageTexture.hpp  Texture.hpp
PathTracer/src/Types/: AccelerationStructure.hpp  BoundingBox.cpp  BoundingBox.hpp  BoundingVolume.cpp  BoundingVolume.hpp  CMakeLists.txt  KdNode.cpp  KdNode.hpp  Material.cpp  Material.hpp  Plane.hpp  RenderJob.hpp  SynchronizedQueue.hpp
PathTracer/src/Utility/: ArgParser.cpp  ArgParser.hpp  materialUtility.cpp  materialUtility.hpp  mathUtility.cpp  mathUtility.hpp
PathTracer/tests/: CMakeLists.txt  TestBoundingBox.cpp  TestBoundingBox.hpp  TestRayTracer.cpp  TestRayTracer.hpp  main.cpp  template.cpp
RayTracer/: CMakeLists.txt
RayTracer/lib/assimp-5.0.1/BINARIES/Win32/: ALL_BUILD.vcxproj  CMakeCache.txt  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  ZERO_CHECK.vcxproj.filters
RayTracer/lib/assimp-5.0.1/BINARIES/Win32/code/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp.vcxproj  assimp.vcxproj.filters
RayTracer/lib/assimp-5.0.1/BINARIES/Win32/contrib/: INSTALL.vcxproj  cmake_install.cmake
RayTracer/lib/assimp-5.0.1/BINARIES/Win32/test/: INSTALL.vcxproj  cmake_install.cmake  unit.vcxproj  unit.vcxproj.filters
RayTracer/lib/assimp-5.0.1/BINARIES/x64/: ALL_BUILD.vcxproj  Assimp.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  cmake_install.cmake  uninstall.vcxproj.filters
RayTracer/lib/assimp-5.0.1/BINARIES/x64/code/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp.vcxproj
RayTracer/lib/assimp-5.0.1/BINARIES/x64/contrib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
RayTracer/lib/assimp-5.0.1/BINARIES/x64/test/: INSTALL.vcxproj  cmake_install.cmake  unit.vcxproj
RayTracer/lib/assimp-5.0.1/code/Material/: MaterialSystem.cpp
RayTracer/lib/assimp-5.0.1/include/assimp/: camera.h  light.h  mesh.h  metadata.h  types.h  vector2.inl  vector3.h  vector3.inl
RayTracer/lib/assimp-5.0.1/test/models/PLY/: cube_out.ply
RayTracer/lib/fcollada/FCollada/: CMakeLists.txt  DLLEntry.cpp  Sconstruct
RayTracer/lib/fcollada/FColladaTools/: FColladaTools.sln  Sconstruct  UpgradeLog.htm
RayTracer/lib/fcollada/FColladaTools/FCExport/: FCExport.vcxproj
RayTracer/lib/fcollada/FColladaTools/FCProcessImages/: FCProcessImages.vcxproj  FCProcessImages.vcxproj.filters
RayTracer/lib/fcollada/FColladaTools/FCProcessMeshes/: FCProcessMeshes.vcxproj
RayTracer/lib/fcollada/FColladaTools/FCValidate/: FCValidate.vcxproj  FCValidate.vcxproj.filters
RayTracer/res/: testScene.blend  testScene.dae  testScene_cube.dae  testScene_diffuse.dae  testScene_dof.dae  testScene_emission.dae  testScene_multiple_lights.dae  testScene_path_trace.dae  testScene_plane_cube.dae  testScene_reflection.dae  testScene_refraction.dae  test_sphere.dae
RayTracer/src/: Application.cpp  Application.hpp  CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.hpp  RayTracer.cpp  RayTracer.hpp  exceptions.hpp  main.cpp  raytracing.hpp  settings.hpp  template.cpp  template.hpp
RayTracer/src/Textures/: CMakeLists.txt  CheckerTexture.cpp  CheckerTexture.hpp  ImageTexture.cpp  ImageTexture.hpp  Texture.hpp
RayTracer/src/Types/: AccelerationStructure.cpp  AccelerationStructure.hpp  BoundingBox.cpp  BoundingBox.hpp  BoundingVolume.cpp  BoundingVolume.hpp  CMakeLists.txt  KdNode.cpp  KdNode.hpp  Material.hpp  Plane.hpp  RenderJob.cpp  RenderJob.hpp  SynchronizedQueue.cpp  SynchronizedQueue.hpp
RayTracer/src/Utility/: CMakeLists.txt  materialUtility.cpp  mathUtility.cpp  mathUtility.hpp
RayTracer/tests/: CMakeLists.txt  TestBoundingBox.cpp  TestBoundingBox.hpp  TestRayTracer.cpp  template.hpp
(+728 files in other folders)
